* 2013-07-22 - tobias.friedrich@open-xchange.com

 - Fix for bug 27663: Always include ORDER BY columns in SELECT clause when using UNION SELECTs 

* 2013-07-22 - thorben.betten@open-xchange.com

 - Fix for bug 27669: Added null guard when counting SIEVE action commands
 - Fix for bug 27604: Fixed multiple problems occurring in customer environment

* 2013-07-19 - thorben.betten@open-xchange.com

 - Fix for bug 27539: Sanitize Content-Type header if 'javax.mail.internet.MimeMessage.saveChanges()' fails
 - Fix for bug 27645: Chunk-wise copy/move of messages from one account to another
 - Fix for bug 27639: Ignore trailing non-LDH characters on IDN-to-ACE conversion
 - Fix for bug 27656: Added missing package import

* 2013-07-18 - thorben.betten@open-xchange.com

 - Fix for bug 27232: Reconnect if mail part's folder has been closed in the meantime
 - Fix for bug 27641: Lowered log level for charset auto-detection triggered by invalid charset name

* 2013-07-16 - marc.arens@open-xchange.com

 - Fix for bug 27469: Stop checking aliases as soon as a valid match was found
   
* 2013-07-11 - marcus.klein@open-xchange.com/jan.bauerdick@open-xchange.com

 - Fix for bug 19817: Initializing the transaction counter for the replication monitor as early as possible no normal groupware login
   process. This prevents reading not existing columns from the slave by redirecting the connections to the master.

* 2013-07-08 - thorben.betten@open-xchange.com

 - Fix for bug 27417: Added 'soap-cxf.properties' file to SOAP CXF bundle that provides option "com.openexchange.soap.cxf.baseAddress" to
                      specify a custom base address if it is supposed to differ from default one
 - Fix for bug 27438: Dropped option for JSON statistics since it has been removed with v7.2.2

* 2013-07-06 - thorben.betten@open-xchange.com

 - Fix for bug 27397: Set generated file name if missing to signal non-empty file holder